--- a/exp/exploration.ipynb
+++ b/exp/exploration.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "import csv\n"
+    "import csv\n",
+    "import json"
    ]
   },
   {
@@ -146,12 +147,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load json file to extend the node info\n"
+    "# load json file to extend the node info\n",
+    "with open(\"../data/aggregated_data.json\") as jr:\n",
+    "    cve_json = json.load(jr)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'org.jenkins-ci.main:cli:1.591'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(cve_json.keys())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_metric_ml = nx.read_graphml(\"../data/graph_metric.graphml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
