--- a/exp/json_exp.ipynb
+++ b/exp/json_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "a6fa82f7-4de2-4ceb-962d-a8f334ad944a",
    "metadata": {},
    "outputs": [],
@@ -350,9 +350,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53d8b8d7-f41c-460f-ac01-f16f534b75ec",
+   "metadata": {},
+   "source": [
+    "# check cves famlilies with cwes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "511ce4a6-207e-4c6d-83ac-f221c596054a",
+   "id": "4e83d1db-b76f-4d69-9095-94a8bb323096",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -374,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
