creating custom code to calculate diverse centrailities

--- a/exp/csv_exp.ipynb
+++ b/exp/csv_exp.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,11 +592,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47937    {\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"7\\\",...\n",
+       "47939    {\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"2\\\",...\n",
+       "47941    {\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"9\\\",...\n",
+       "47943    {\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"367\\...\n",
+       "47945    {\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"448\\...\n",
+       "Name: value, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fresh_series.compute().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fresh_series.compute().head()"
+    "def str_to_json(escaped_json_str):\n",
+    "    try:\n",
+    "        clean_str = escaped_json_str.replace('\\\\\"', '\"')\n",
+    "        return json.loads(clean_str)\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error parsing JSON: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_part_df = graph_metric_csv.copy().compute()[3000000:90000000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "value\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"0\\\",\\\"outdatedTimeInMs\\\":\\\"0\\\"}}                637311\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"1\\\",\\\"outdatedTimeInMs\\\":\\\"1000\\\"}}                485\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"2\\\",\\\"outdatedTimeInMs\\\":\\\"31129028000\\\"}}         267\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"3\\\",\\\"outdatedTimeInMs\\\":\\\"32944399000\\\"}}         199\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"2\\\",\\\"outdatedTimeInMs\\\":\\\"1000\\\"}}                187\n",
+       "                                                                                           ...  \n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"158\\\",\\\"outdatedTimeInMs\\\":\\\"73779759000\\\"}}         1\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"96\\\",\\\"outdatedTimeInMs\\\":\\\"137927285000\\\"}}         1\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"15\\\",\\\"outdatedTimeInMs\\\":\\\"141161249000\\\"}}         1\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"28\\\",\\\"outdatedTimeInMs\\\":\\\"114296008000\\\"}}         1\n",
+       "{\\\"freshness\\\":{\\\"numberMissedRelease\\\":\\\"5\\\",\\\"outdatedTimeInMs\\\":\\\"1371811000\\\"}}            1\n",
+       "Name: count, Length: 10955346, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_part_df[graph_part_df['type']==\"FRESHNESS\"][\"value\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "part_fresh_json_series = graph_part_df[graph_part_df['type']==\"FRESHNESS\"][\"value\"].apply(lambda x: str_to_json(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvalidIndexError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInvalidIndexError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_70793/1116095451.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgraph_part_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"value\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph_part_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"value\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph_part_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'type'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"FRESHNESS\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpart_fresh_json_series\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/miniconda3/lib/python3.10/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, cond, other, inplace, axis, level)\u001b[0m\n\u001b[1;32m  10683\u001b[0m         \u001b[0;31m# see gh-21891\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10684\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"__invert__\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10685\u001b[0m             \u001b[0mcond\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10686\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m> 10687\u001b[0;31m         return self.where(\n\u001b[0m\u001b[1;32m  10688\u001b[0m             \u001b[0;34m~\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10689\u001b[0m             \u001b[0mother\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10690\u001b[0m             \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/miniconda3/lib/python3.10/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, cond, other, inplace, axis, level)\u001b[0m\n\u001b[1;32m  10611\u001b[0m                         \u001b[0mChainedAssignmentError\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10612\u001b[0m                         \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10613\u001b[0m                     )\n\u001b[1;32m  10614\u001b[0m         \u001b[0mother\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m> 10615\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_where\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/miniconda3/lib/python3.10/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, cond, other, inplace, axis, level)\u001b[0m\n\u001b[1;32m  10347\u001b[0m                 )[1]\n\u001b[1;32m  10348\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10349\u001b[0m                 \u001b[0;31m# if we are NOT aligned, raise as we cannot where index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10350\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_indexed_same\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m> 10351\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mInvalidIndexError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m  10352\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10353\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10354\u001b[0m                     \u001b[0;31m# TODO(EA2D): avoid object-dtype cast in EA case GH#38729\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mInvalidIndexError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "graph_part_df[\"value\"] = graph_part_df[\"value\"].mask(graph_part_df['type'] == \"FRESHNESS\", part_fresh_json_series )\n"
    ]
   },
   {
@@ -605,14 +714,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
-    "fresh_json_series = graph_metric_csv[graph_metric_csv['type']==\"FRESHNESS\"][\"value\"].apply(lambda x: json.loads(x))\n",
-    "\n",
-    "fresh_json_series['numberMissedRelease'] = df['json_column'].apply(lambda x: x['numberMissedRelease'])\n",
-    "fresh_json_series[\"outdatedTimeInMs\"] = df[\"json_column\"].apply(lambda x: x['outdatedTimeInMs'])\n",
-    "\n"
+    "graph_part_df['numberMissedRelease'] = graph_part_df[\"value\"].apply(lambda x: x['numberMissedRelease'] if isinstance(x, dict) else x)\n",
+    "graph_part_df[\"outdatedTimeInMs\"] = graph_part_df[\"value\"].apply(lambda x: x['outdatedTimeInMs'] if isinstance(x, dict) else x)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_part_df[~graph_part_df['numberMissedRelease'].isna()]['numberMissedRelease'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Min-max normalization function\n",
+    "def min_max_normalize(series):\n",
+    "    return (series - series.min()) / (series.max() - series.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize the attributes\n",
+    "graph_part_df['Normalized_Missed'] = min_max_normalize(graph_part_df['numberMissedRelease'])\n",
+    "graph_part_df['Normalized_Outdated'] = min_max_normalize(graph_part_df['outdatedTimeInMs'])\n",
+    "\n",
+    "# Define weights\n",
+    "w1 = 0.5  # Weight for numberMissedRelease\n",
+    "w2 = 0.5  # Weight for outdatedTimeInMs\n",
+    "\n",
+    "# Calculate combined freshness score\n",
+    "graph_part_df['Freshness_Score'] = w1 * graph_part_df['Normalized_Missed'] + w2 * graph_part_df['Normalized_Outdated']\n",
+    "\n",
+    "# Display the result\n",
+    "print(graph_part_df[['id', 'Freshness_Score']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(graph_part_df[graph_part_df[\"Freshness_Score\"].isna()][['id', 'Freshness_Score']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
