--- a/exp/graphml_exp.ipynb
+++ b/exp/graphml_exp.ipynb
@@ -2,149 +2,159 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8456b2a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "import networkx as nx\n",
-    "\n",
-    "nx_graph = nx.read_graphml(\"../data/graph_metric.graphml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b735e835-ae39-4f76-a45b-effd3c1b49a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"found\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"id\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"type\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"version\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"value\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"labels\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"timestamp\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"scope\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"label\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Ignoring <key id=\"targetVersion\"> because of a missing 'attr.type' attribute. at src/io/graphml.c:751\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-      "/var/folders/kc/c74q_vx95dx4__wm8dtz6q540000gn/T/ipykernel_65682/3315175042.py:4: RuntimeWarning: Could not add vertex ids, there is already an 'id' vertex attribute. at src/io/graphml.c:488\n",
-      "  graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IGRAPH D--- 59152712 178155040 -- \n",
-      "+ attr: id (e)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from igraph import Graph\n",
-    "\n",
-    "# load the graph froma GraphML file\n",
-    "graph = Graph.Read_GraphML(\"../data/graph_metric.graphml\")\n",
-    "\n",
-    "print(graph.summary())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1cb53bd8",
-   "metadata": {},
-   "source": [
-    "## Explore node attributes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8ba21167",
+   "execution_count": 1,
+   "id": "ce0ab004-a181-497b-bb71-4f70f2ef4b12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the first 10 vertex attributes\n",
-    "for v in graph.vs[:100000]:\n",
-    "    if v.attributes() != {}:\n",
-    "        print(f\"Vertex ID: {v.index}, Attributes: {v.attributes()}\")"
+    "from lxml import etree\n",
+    "\n",
+    "def parse_graphml_in_chunks(file_path):\n",
+    "    context = etree.iterparse(file_path, events=(\"start\", \"end\"))\n",
+    "    nodes = {}\n",
+    "    edges = []\n",
+    "    \n",
+    "    for event, elem in context:\n",
+    "        if event == \"end\" and elem.tag == \"{http://graphml.graphdrawing.org/xmlns}node\":\n",
+    "            # Process node\n",
+    "            node_id = elem.attrib['id']\n",
+    "            # Extract other attributes if needed, e.g. CVE_Severity\n",
+    "            attributes = {data.attrib['key']: data.text for data in elem.findall(\"{http://graphml.graphdrawing.org/xmlns}data\")}\n",
+    "            nodes[node_id] = attributes\n",
+    "            elem.clear()  # Clear memory\n",
+    "\n",
+    "        elif event == \"end\" and elem.tag == \"{http://graphml.graphdrawing.org/xmlns}edge\":\n",
+    "            # Process edge\n",
+    "            source = elem.attrib['source']\n",
+    "            target = elem.attrib['target']\n",
+    "            # Extract edge attributes\n",
+    "            attributes = {data.attrib['key']: data.text for data in elem.findall(\"{http://graphml.graphdrawing.org/xmlns}data\")}\n",
+    "            edges.append((source, target, attributes))\n",
+    "            elem.clear()  # Clear memory\n",
+    "            \n",
+    "    return nodes, edges\n",
+    "\n",
+    "# Usage\n",
+    "nodes, edges = parse_graphml_in_chunks('../data/graph_metric.graphml')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "711a4602",
+   "id": "91c75566-87d8-4f18-a326-4afc9bc92081",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([])\n"
+      "59152712\n",
+      "n0 {'labels': ':Artifact', 'id': 'com.splendo.kaluga:alerts-androidlib', 'found': 'true'}\n",
+      "178155040\n",
+      "[('n2', 'n13', {'label': 'relationship_AR'}), ('n1', 'n14', {'label': 'relationship_AR'}), ('n1', 'n7', {'label': 'relationship_AR'}), ('n1', 'n8', {'label': 'relationship_AR'}), ('n2', 'n9', {'label': 'relationship_AR'}), ('n2', 'n4', {'label': 'relationship_AR'}), ('n1', 'n11', {'label': 'relationship_AR'}), ('n1', 'n3', {'label': 'relationship_AR'}), ('n1', 'n6', {'label': 'relationship_AR'}), ('n2', 'n10', {'label': 'relationship_AR'})]\n"
      ]
     }
    ],
    "source": [
-    "node = graph.vs[0]\n",
-    "print(node.attributes().items())"
+    "print(len(nodes))\n",
+    "for key,value in nodes.items():\n",
+    "    print(key, value)\n",
+    "    break\n",
+    "print(len(edges))\n",
+    "print(edges[:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8428619e",
+   "execution_count": 1,
+   "id": "6cfa7aaa-02f0-4728-a239-0f031c765dbe",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Edge ID: 0, Attributes: {'id': 'e0'}\n",
-      "Edge ID: 1, Attributes: {'id': 'e1'}\n",
-      "Edge ID: 2, Attributes: {'id': 'e2'}\n",
-      "Edge ID: 3, Attributes: {'id': 'e3'}\n",
-      "Edge ID: 4, Attributes: {'id': 'e4'}\n",
-      "Edge ID: 5, Attributes: {'id': 'e5'}\n",
-      "Edge ID: 6, Attributes: {'id': 'e6'}\n",
-      "Edge ID: 7, Attributes: {'id': 'e7'}\n",
-      "Edge ID: 8, Attributes: {'id': 'e8'}\n",
-      "Edge ID: 9, Attributes: {'id': 'e9'}\n"
+     "ename": "NameError",
+     "evalue": "name 'nodes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m g\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m g \u001b[38;5;241m=\u001b[39m build_igraph_from_nodes_edges(\u001b[43mnodes\u001b[49m, edges)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nodes' is not defined"
      ]
     }
    ],
    "source": [
-    "for e in graph.es[:10]:  # Access the first 10 edges\n",
-    "    print(f\"Edge ID: {e.index}, Attributes: {e.attributes()}\")"
+    "def build_igraph_from_nodes_edges(nodes, edges):\n",
+    "    # Create an empty graph\n",
+    "    g = ig.Graph(directed=True)\n",
+    "\n",
+    "    # Add all nodes first\n",
+    "    node_ids = list(nodes.keys())  # Get all node IDs\n",
+    "    g.add_vertices(node_ids)  # Add nodes by their IDs\n",
+    "\n",
+    "    # Add all edges\n",
+    "    for edge in edges:\n",
+    "        source, target, attributes = edge\n",
+    "        if source in node_ids and target in node_ids:\n",
+    "            g.add_edge(source, target, **attributes)\n",
+    "        else:\n",
+    "            print(f\"Missing node for edge: {source} -> {target}\")\n",
+    "\n",
+    "    return g\n",
+    "\n",
+    "# Example usage:\n",
+    "g = build_igraph_from_nodes_edges(nodes, edges)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7434a21-1af5-4f0e-8b4b-6571e7d366a4",
+   "metadata": {},
+   "source": [
+    "## print out the attributes of first 10 nodes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "408d60e8",
+   "id": "b735e835-ae39-4f76-a45b-effd3c1b49a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node, attrs in list(G.nodes(data=True))[:10]:\n",
+    "    print(f\"Node {node}: {attrs}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad61fec-0717-454f-87cc-cf21c3fac59a",
+   "metadata": {},
+   "source": [
+    "## print our the attributes of first 10 edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "092e38b8-9d93-4b32-bc4b-db794cf163bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for u, v, attrs in list(G.edges(data=True))[:10]:\n",
+    "    print(f\"Edge {u}-{v}: {attrs}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8adfee4a-5518-4714-8724-1c1f8e346c12",
+   "metadata": {},
+   "source": [
+    "## measure the basic centrality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e81d2ff7-a62d-4240-88ad-c909dba930f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -166,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
